--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -50,13 +50,11 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 95%;
-    max-width: 800px;
     height: 100%;
-    max-height: 95vh;
     overflow-y: auto;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.02);
-    padding: 60px 30px;
+    padding: 40px 20px;
     z-index: 999;
 }
 
@@ -89,16 +87,15 @@
 }
 
 .view {
-    font-size: 20px;
+    font-size: 18px;
     background: rgba(255, 255, 255, 0.3);
-    padding: 8px 40px;
+    padding: 8px 30px;
     border-radius: 50px;
     display: block;
-    margin-left: auto;
+    margin: 0 auto;
 }
 
 .genres {
-    display: flex;
     margin-left: 0;
     padding: 0;
 }
@@ -106,8 +103,10 @@
 .genres li {
     margin-right: 15px;
     opacity: 0.5;
+    display: inline-block;
+    font-size: 14px;
 }
 
 .summary {
-    font-size: 18px;
+    font-size: 16px;
 }
