--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -5,9 +5,9 @@
     font-style: normal;
 }
 
-.wrap {
+/* .wrap {
     padding-bottom: 100px;
-}
+} */
 
 .inner {
     padding-left: 3%;
@@ -17,4 +17,5 @@
     padding-top: 50px;
     font-family: 'OKCHAN';
     color: #fff;
+    text-shadow: 5px 0px 5px black;
 }
