--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -2,6 +2,7 @@
 
 .slide_box {
     margin-top: 50px;
+    position: relative;
 }
 
 
@@ -44,13 +45,13 @@
 
 /* hide_box */
 .hide_box {
-    position: fixed;
+    position: absolute;
     background-image: linear-gradient(to bottom, #434343 0%, black 100%);
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 95%;
-    height: 100%;
+    width: 100%;
+    height: 110%;
     overflow-y: auto;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.02);
