--- a/src/routes/Loading.module.css
+++ b/src/routes/Loading.module.css
@@ -12,7 +12,7 @@
     width: 100%;
     position: fixed;
     height: 100%;
-    top: 0%;
+    top: 0;
     left: 0%;
     background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.25) 200%);
     background-blend-mode: multiply;
