--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,18 @@ html {
     background: #333 !important;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: #ddd;
+    border-radius: 10px;
+
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.25) 200%);
+    border-radius: 10px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -25,12 +37,13 @@ html {
     box-sizing: border-box;
     color: #fff;
     font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+    text-decoration: none !important;
 }
 
 
 a {
     color: inherit;
-    text-decoration: none
+    text-decoration: none !important;
 }
 
 a:hover {
@@ -42,15 +55,8 @@ a:checked,
 a:focus,
 a:hover,
 a:visited {
-    text-decoration: none
-}
+    text-decoration: none !important;
 
-ul>li>a:active,
-ul>li>a:checked,
-ul>li>a:focus,
-ul>li>a:hover,
-ul>li>a:visited {
-    text-decoration: none
 }
 
 table {
