--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -111,3 +111,13 @@
 .summary {
     font-size: 16px;
 }
+
+@media screen and (max-width: 769px) {
+    .title {
+        font-size: 18px;
+    }
+
+    .year {
+        font-size: 15px;
+    }
+}
