--- a/src/routes/Search.module.css
+++ b/src/routes/Search.module.css
@@ -6,15 +6,65 @@
 
 .SearchList {
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.SearchTitle {
+    font-family: 'OKCHAN';
+    text-align: center;
 }
 
 .SearchList li {
-    display: inline-block;
     margin-right: 20px;
     margin-bottom: 20px;
     width: calc((100% - 60px)/4);
+    flex-basis: auto;
+
 }
 
 .SearchList li:nth-child(4n) {
     margin-right: 0;
+}
+
+.pagination {
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+.pagination a {
+    font-family: 'OKCHAN';
+    transition: all 0.5s;
+    font-size: 18px;
+    margin: 0 10px;
+}
+
+.pagination .on {
+    background: tomato;
+    color: #fff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+}
+
+.pagination a:hover {
+    color: tomato;
+}
+
+
+
+@media screen and (max-width: 769px) {
+    .SearchList li {
+        width: calc((100% - 20px)/2);
+    }
+
+    .SearchList li:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .pagination a {
+        font-size: 14px;
+        margin: 0 5px;
+    }
 }
