header css modify

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,6 +5,7 @@
     font-style: normal;
 }
 
+
 .navbar-brand a {
     font-size: 25px;
     color: tomato;
@@ -14,6 +15,7 @@
 
 .nav-link a {
     transition: all 0.5s;
+    margin: 0 20px;
 }
 
 .nav-link a:hover {
